--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,21 @@
 
 #preloader {
     position: fixed;
+    text-align: center;
     left: 0;
     top: 0;
     z-index: 999;
     width: 100%;
     height: 100%;
     overflow: visible;
-    background: #fff url('//cdnjs.cloudflare.com/ajax/libs/file-uploader/3.7.0/processing.gif') no-repeat center center;
+    background: #000000;
+}
+
+canvas {
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
